# CVinRobocon2019

./: .CMakeLists.txt.swp  .gitignore  CMakeLists (win).txt  CMakeLists.txt  NUC8i7HVK-config.md  README.md
XUsrc/: act_d435.cpp  act_d435.h  getStatus.cpp  getStatus.h  kalman_filter.cpp  kalman_filter.h  main.cpp  main.h  robot_locator.cpp  robot_locator.h
cmake/: FindRealSense2.cmake
cmake/createLib/: CMakeLists.txt
inc/inference_engine/: tensorRT.h
inc/mb_cuda/common/: point_types.h
inc/mb_cuda/filters/: statistical_outlier_removal.cu  voxel_grid.cu
inc/mindVisionApi/src/: mv_init.h
inc/tensorRT4/ARM64/include/: NvInfer.h
inc/tensorRT4/ARM64/lib/: libnvinfer_plugin.so.4  libnvinfer_plugin.so.4.1.3  libnvparsers.so.4  libnvparsers.so.4.1.3
inc/tensorRTplugin/: common.h  tensorNet.h
inc/tensorRTplugin/tmp/: tensorNet.cpp  tensorNet.h
mb_cuda/io/: pcl_thrust.cpp
script/: openshell.sh  run.sh  run_all.sh  test.txt
src/: .getStatus.cpp.swp  act_d435.cpp  act_d435.h  calc_time.cpp  calc_time.h  getStatus.cpp  getStatus.h  kalman_filter.cpp  kalman_filter.h  main.cpp  main.h  robot_locator.cpp  robot_locator.h
testsrc/: act_d435.cpp  act_d435.h  main.cpp  main.h  robot_locator.cpp  robot_locator.h
